# factorio-chat-link

./: Cargo.toml
src/: main.rs
