[package]
name = "factorio-chat-link"
version = "0.1.0"
authors = ["circlesabound <circlesabound@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logwatcher = "0.1"
serenity = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
toml = "0.5"