[package]
name = "factorio-chat-link"
version = "0.1.0"
authors = ["circlesabound <circlesabound@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logwatcher = "0.1"
rcon = "0.4"
serenity = { version = "0.10", default-features = false, features = [ "client", "gateway", "rustls_backend", "model", "cache" ] }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
toml = "0.5"